--- a/frontEnd/frontend-reactjs-typescript/public/index.html
+++ b/frontEnd/frontend-reactjs-typescript/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Nunito+Sans:ital,opsz,wght@0,6..12,200;1,6..12,300&family=Nunito:wght@200&family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="Web site created using create-react-app"
